<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot4_desktop</name>
  <version>1.0.0</version>
  <description>Turtlebot4 Desktop Metapackage</description>
  <maintainer email="rkreinin@clearpathrobotics.com">rkreinin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>turtlebot4_viz</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
