<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot4_viz</name>
  <version>1.0.0</version>
  <description>Visualization launchers and helpers for Turtlebot4</description>
  <maintainer email="rkreinin@clearpathrobotics.com">rkreinin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rviz2</depend>
  <depend>rqt_robot_monitor</depend>
  <depend>turtlebot4_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
